# streamlit_atmpop

./: README.md  app.py  pyproject.toml
samples/: test1.csv  test10.csv  test11.csv  test12.csv  test13.csv  test14.csv  test15.csv  test16.csv  test2.csv  test3.csv  test4.csv  test5.csv  test6.csv  test7.csv  test8.csv  test9.csv
src/: atms_popularity_service.py  data_generator.py  evaluate_location.py  place_quality_calc.py
