[tool.poetry]
name = "atms_popularity_demo_app"
version = "0.1.0"
description = ""
authors = ["yugorshkov <gyuv28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.11.1"
pandas = "^1.4.3"
black = "^22.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
